addition and division routes working

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html ng-app='routeCalc'>
   <head>
     <meta charset="utf-8">
     <script src='https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.3/angular.js'></script>
@@ -16,6 +16,8 @@
     <title>Route Based Calculator</title>
   </head>
   <body>
+    <div ng-view>
 
+    </div>
   </body>
 </html>
